Fixed label alignment, added disclaimer text, and added react-tooltip

--- a/src/components/Forms/Form.module.css
+++ b/src/components/Forms/Form.module.css
@@ -105,6 +105,8 @@
   font-size: 0.8rem;
   margin-right: 0.5rem;
   color: var(--darkgray);
+  display: flex;
+  align-items: center;
 }
 
 .inputField > input {
@@ -268,6 +270,16 @@
 .parameterContainer {
   margin: 0.25rem 1rem;
   font-size: 0.85rem;
+}
+
+.disclaimer {
+  font-size: 0.65rem;
+  padding: 1rem 1rem 0rem 1rem;
+  color: var(--midgray);
+}
+
+.disclaimer strong {
+  color: var(--darkgray);
 }
 
 @media (max-width: 900px) {
